--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -8,6 +8,12 @@ html {
     p {
         color: #f4f5f6;
     }
+
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
 }
 
 nav {
@@ -17,9 +23,11 @@ nav {
     max-width: 800px;
     margin-right: auto;
     margin-left: auto;
+    padding: 30px;  
 
     a {
         color: #999999;
+        font-weight: bold;
         text-decoration: none;
         
     }
