--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -14,6 +14,7 @@ html {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
+    padding-bottom: 200px;
 }
 
 nav {
