--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -14,7 +14,7 @@ html {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
-    padding-bottom: 200px;
+    padding-bottom: 100px;
 }
 
 nav {
@@ -44,6 +44,20 @@ nav {
     img {
         height: 60px;
     }
+
+    @media only screen and (max-width: 481px) {
+        padding: 5px;  
+
+        img {
+            height: 30px;
+        }
+
+        a {
+            font-size: 0.9rem
+        }
+    }
+
+    
 }
 
 .view {
